# mining-dashboard

./: .gitignore  README.md  app.py  main.py  package-lock.json  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
data/: mine_productivity_input.xlsx  mine_productivity_input_template.xlsx  sample_mine_productivity_input.xlsx
public/: app.js  styles.css
scripts/: make_template.py
src/: charts.py  dashboard_api.py  io_excel.py  kpi.py  theme.py
templates/: index.html
