[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mine-productivity-dashboard"
version = "0.1.0"
description = "Single-site mine and plant executive dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.54.0",
    "pandas==2.3.3",
    "plotly==6.5.2",
    "openpyxl==3.1.5",
    "numpy==2.4.2",
]

[project.scripts]
app = "main:main"

[tool.setuptools]
py-modules = ["main", "app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
